<resources>
    <string name="app_name">Journey Secure Chat V2</string>
    <string name="authenticate_with_journey">Authenticate with Journey</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="button">Button</string>
    <string name="tab2">Chat</string>
    <string name="enroll_or_authenticate">Enroll or Authenticate</string>
    <string name="button5">Enroll</string>
    <string name="authButton">Authenticate</string>
    <string name="textview">or</string>
    <string name="journey_secure_chat">Journey Secure Chat</string>
    <string name="domain">journey.securechat.com</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://pure-beach-76649.herokuapp.com/.well-known/assetlinks.json\" }]</string>
    <string name="default_notification_channel_id">MainActivity</string>

</resources>